# concordia-dao-council

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  concordia-submission-package-v4.md  conftest.py  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
agents/: __init__.py
config/: dao_constitution.cas.json
contracts/odra-governance-receipt-v3/: .gitignore  Cargo.toml  Odra.toml  README.md  build.rs  deployment.manifest.json  rust-toolchain.toml
contracts/odra-governance-receipt-v3/resources/casper_contract_schemas/: governance_receiptv3_schema.json
contracts/odra-governance-receipt-v3/resources/legacy/: governance_receiptv3_schema.json
contracts/odra-governance-receipt-v3/src/: encoding.rs  lib.rs
contracts/odra-governance-receipt-v3/tests/: adversarial.rs  deployment.rs  encoding.rs  network_profile.rs
contracts/odra-governance-receipt-v3/wasm/: GovernanceReceiptV3.wasm
dashboard/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.mjs
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CASPER_DEPLOYMENT.md  CASPER_TOOLING_MAP.md  CASPER_TOOLKIT_INTEGRATION.md  CLAIM_TO_ARTIFACT_MAP.json  COUNCIL_REVIEW_PACKAGE.md  DAO_ADOPTION_PACK.md  DEFI_TREASURY_TEMPLATE.md  DEMO_SCRIPT.md  DORAHACKS_SUBMISSION_TEXT.md  ENVELOPE_V3_ENCODING.md  FINAL_REVIEW_REPORT.md  FRONTEND_REVIEW_NOTES.md  LAUNCH_ROADMAP.md  LLM_PROVIDER.md  MCP_JUDGE_TOOL.md  POLICY_TEMPLATES.md  PRE_SUBMISSION_VERIFICATION.md  PROOF_PACK.md  RWA_PROPOSAL_TEMPLATE.md  SOCIAL_LAUNCH.md  SUBMISSION_ASSETS_STATUS.md  SUBMISSION_PACKET.md  TECHNICAL_JURY_NOTE.md  VERIFICATION_NOTES.md  requirements-docs.in  requirements-docs.txt
docs-site/: agent-taxonomy.md  architecture.md  deployment-security.md  governance-receipts.md  index.md  judge-walkthrough.md  launch-roadmap.md  links.md  official-x402.md  policy-matrix.md  proof-verification.md  safepay-lite.md  treasury-execution.md  v3-envelope.md  verifier-cli.md
gateway/: __init__.py  app.py  auth.py  database.py  rate_limit.py
handoff/: CARD_CHAIN_ARTIFACT_V1.md  CLAUDE_OVERNIGHT_CAPTURE_MANIFEST.md  CLAUDE_REVIEW_CODEX_LANE.md  CLAUDE_SETTLE_JOURNAL_MANIFEST.md  EXECUTION_STATE.md  (+29 more)
(+531 files in other folders)
