[project]
name = "concordia-dao-council"
version = "0.1.0"
description = "Concordia DAO Council: multi-agent DAO governance and Casper Testnet execution"
requires-python = ">=3.12,<3.14"
license = "MIT"
readme = "README.md"

dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "pydantic>=2.0,<3.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "langchain-openai>=0.3.0",
    "litellm>=1.80",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "bcrypt==5.0.0",
    "pycspr==1.2.0",
    "opentelemetry-api>=1.30,<2.0",
    "opentelemetry-sdk>=1.30,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0,<1.0",
    "opentelemetry-instrumentation-httpx>=0.51b0,<1.0",
    "reportlab>=5.0.0",
    "pypdf==6.14.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "gateway", "agents", "x402_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
constraint-dependencies = [
    "starlette>=1.3.1",
    "langsmith>=0.8.18",
    "pillow==12.3.0",
]
