[package]
name = "concordia-odra-governance-receipt-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "=0.10.6", default-features = false }
odra = { version = "=2.8.2", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "=2.8.2", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "=2.8.2", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "=2.8.2", features = [], default-features = false }

[[bin]]
name = "concordia_odra_governance_receipt_v3_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "concordia_odra_governance_receipt_v3_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
